# unified-attestation

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
appraisers/cca/: Cargo.toml
appraisers/cca-hydra/: Cargo.toml
appraisers/cca-hydra/src/: lib.rs
appraisers/cca/src/: lib.rs
appraisers/csv/: Cargo.toml
appraisers/csv-hydra/: Cargo.toml
appraisers/csv-hydra/src/: lib.rs
appraisers/csv/src/: lib.rs
appraisers/itrustee/: Cargo.toml
appraisers/itrustee-hydra/: Cargo.toml
appraisers/itrustee-hydra/src/: lib.rs
appraisers/itrustee/src/: lib.rs
appraisers/mock/: Cargo.toml
appraisers/mock/src/: lib.rs
appraisers/tdx/: Cargo.toml
appraisers/tdx-hydra/: Cargo.toml
appraisers/tdx-hydra/src/: lib.rs
appraisers/tdx/src/: lib.rs
appraisers/virtcca/: Cargo.toml
appraisers/virtcca-hydra/: Cargo.toml
appraisers/virtcca-hydra/src/: lib.rs
appraisers/virtcca/src/: lib.rs
appraisers/wit/: verifier.wit
attester/: Cargo.toml
attester/src/: config.rs  evidence.rs  hydra_client.rs  lib.rs  main.rs
config/: attester-cca-hydra.toml  attester-cca.toml  attester-csv-hydra.toml  attester-csv.toml  attester-itrustee-hydra.toml  attester-itrustee.toml  attester-tdx-hydra.toml  attester-tdx.toml  attester-virtcca-hydra.toml  attester-virtcca.toml  attester.toml  verifier-cca-hydra.toml  verifier-cca.toml  verifier-csv-hydra.toml  verifier-csv.toml  verifier-itrustee-hydra.toml  verifier-itrustee.toml  verifier-tdx-hydra.toml  verifier-tdx.toml  verifier-virtcca-hydra.toml  verifier-virtcca.toml  verifier.toml
contracts/: DeviceVCRecord.sol  README.md
docs/en/: cca.md  config.md  csv.md  design.md  hydra.md  itrustee.md  operations.md  protocol.md  tdx.md  virtcca.md
docs/zh/: cca.md  config.md  csv.md  design.md  hydra.md  itrustee.md  operations.md  protocol.md  tdx.md  virtcca.md
evidence-verify/: Cargo.toml  README.md
evidence-verify/src/: lib.rs  main.rs
evidence-verify/src/csv/: mod.rs  report.rs  sm2.rs
evidence-verify/src/eventlog_rs/: bios_eventlog.rs  mod.rs
evidence-verify/src/ima/: itrustee.rs
evidence-verify/src/itrustee/: itrustee.rs  mod.rs
evidence-verify/src/virtcca/: event_log.rs  mod.rs
hydra-toolkit/: Cargo.toml  example.txt
hydra-toolkit/src/: device_vc.rs  lib.rs  main.rs  poseidon.rs  shurbstree.rs
protos/: Cargo.toml  attestation.proto  build.rs
protos/src/: lib.rs
relying-party/: Cargo.toml
relying-party/src/: hydra_listener.rs  lib.rs  main.rs
scripts/: build-appraisers.sh  create_project_docx.py  format_project_docx.py  gen-keys.sh  publish_device_vc_package.ps1  run-mvp.sh  set_iota_device_vc_env.ps1
tee-evidence/: Cargo.toml  README.md  build.rs  evidence.json
tee-evidence/src/: dylib.rs  ima.rs  lib.rs  main.rs
tee-evidence/src/csv_kernel/: csv_attestation.h  csv_kernel_attestation.c  mod.rs
tee-evidence/src/csv_user/: csv_attestation.h  csv_user_attestation.c  mod.rs
tee-evidence/src/itrustee/: itrustee.rs  mod.rs
tee-evidence/src/virtcca/: mod.rs  virtcca.rs
verifier/: Cargo.toml
verifier/src/: cca_native.rs  config.rs  csv_native.rs  ear.rs  grpc.rs  hydra_daemon.rs  itrustee_native.rs  lib.rs  main.rs  virtcca_native.rs  wasm_host.rs
