[package]
name = "attester"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
hydra-toolkit = { path = "../hydra-toolkit" }
prost.workspace = true
protos = { path = "../protos" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ureq = "2"

# Hydra ZK stack (ark 0.3 series pinned by hydra-toolkit).
ark-bls12-381 = "0.3.0"
ark-crypto-primitives = "0.3.0"
ark-groth16 = "0.3.0"
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-serialize = "0.3.0"
arkworks-r1cs-gadgets = { version = "1.2.0", default-features = false }
ecdsa = "0.16"
k256 = { version = "0.13", features = ["ecdsa", "ecdh", "sha256"] }
num-bigint = "0.4.6"
rand_core = { version = "0.6", features = ["std"] }
