[package]
name = "evidence-verify"
version = "0.1.0"
edition = "2021"

[features]
default = []
csv-verifier = [
    "base64",
    "hex",
    "log",
    "openssl",
    "sha2",
]
csv-user-verifier = ["csv-verifier"]
csv-kernel-verifier = ["csv-verifier"]
itrustee-verifier = [
    "base64-url",
    "hex",
    "log",
    "sha2",
]
virtcca-verifier = [
    "base64-url",
    "byteorder",
    "ciborium",
    "cose",
    "hex",
    "lazy_static",
    "log",
    "openssl",
    "sha2",
]
ima-verifier = [
    "fallible-iterator",
    "ima-measurements",
    "openssl",
]
no_as = []

[dependencies]
anyhow = "1"
base64 = { version = "0.22", optional = true }
base64-url = { version = "3", optional = true }
byteorder = { version = "1", optional = true }
ciborium = { version = "0.2", optional = true }
cose = { package = "cose-rust", version = "0.1.7", optional = true }
fallible-iterator = { version = "0.2", optional = true }
hex = { version = "0.4", optional = true }
ima-measurements = { version = "0.2", optional = true }
lazy_static = { version = "1", optional = true }
log = { version = "0.4", optional = true }
openssl = { version = "0.10", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", optional = true }
