[package]
name = "hydra-toolkit"
version = "0.1.0"
edition = "2024"


[dependencies]
arkworks-r1cs-gadgets = { version = "1.2.0", default-features = false }
arkworks-native-gadgets = { version = "1.2.0", default-features = false }
ark-bls12-381 = "0.3.0"
ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
arkworks-utils = {version = "1.0.1",default-features = false, features = ["poseidon_bn254_x5_2", "poseidon_bn254_x5_3", "poseidon_bn254_x5_4", "poseidon_bn254_x5_5", "poseidon_bls381_x5_3"] }
ark-groth16 = "0.3.0"
ark-snark = "0.3.0"
ark-crypto-primitives  = "0.3.0"
rayon = "1.11.0"
identity_iota = { version = "1.5.0", features = ["memstore"] }
iota-sdk = { version = "1.0.2", default-features = true, features = ["tls", "client", "stronghold"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.62"
rand = "0.8.5"
ecdsa = "0.16"
k256 = { version = "0.13", features = ["ecdsa", "ecdh", "sha256"] }
rand_core = { version = "0.6", features = ["std"] }
hex = "0.4"
num-bigint = "0.4.6"
sha2 = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
ark-serialize = "0.3.0"
aes-gcm = "0.10"
hkdf = "0.12"

[features]
default = ["std"]
std = [
  "ark-std/std",
  "arkworks-r1cs-gadgets/std",
  "arkworks-native-gadgets/std",
  "ark-ff/std",
  "ark-r1cs-std/std",
  "ark-relations/std",
]
parallel = [
  "ark-ff/parallel",
  "ark-std/parallel",
  "ark-r1cs-std/parallel",
]
