[package]
name = "hydra-toolkit"
version = "0.1.0"
edition = "2024"


[dependencies]
arkworks-native-gadgets = { version = "1.2.0", default-features = false }
ark-bls12-381 = "0.3.0"
ark-ff = { version = "^0.3.0", default-features = false }
arkworks-utils = {version = "1.0.1",default-features = false, features = ["poseidon_bn254_x5_2", "poseidon_bn254_x5_3", "poseidon_bn254_x5_4", "poseidon_bn254_x5_5", "poseidon_bls381_x5_3"] }
ark-groth16 = "0.3.0"
rayon = "1.11.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.62"
ecdsa = "0.16"
k256 = { version = "0.13", features = ["ecdsa", "ecdh", "sha256"] }
rand_core = { version = "0.6", features = ["std"] }
num-bigint = "0.4.6"
ark-serialize = "0.3.0"
aes-gcm = "0.10"
hkdf = "0.12"

[features]
default = ["std"]
std = [
  "arkworks-native-gadgets/std",
  "ark-ff/std",
]
parallel = [
  "ark-ff/parallel",
]
