[package]
name = "relying-party"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
jsonwebtoken.workspace = true
hydra-toolkit = { path = "../hydra-toolkit" }
prost.workspace = true
protos = { path = "../protos" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Hydra ZK stack (ark 0.3 series pinned by hydra-toolkit).
ark-bls12-381 = "0.3.0"
ark-crypto-primitives = "0.3.0"
ark-groth16 = "0.3.0"
ark-serialize = "0.3.0"
k256 = { version = "0.13", features = ["ecdsa", "ecdh", "sha256"] }
hex.workspace = true
