[package]
name = "tee-evidence"
version = "0.1.0"
edition = "2021"

[features]
default = []
itrustee-attester = []
virtcca-attester = []
csv-user-attester = []
csv-kernel-attester = []

[dependencies]
anyhow = "1"
base64 = "0.22"
log = "0.4.33"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
