[package]
name = "cca-appraiser"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
test = false
doctest = false

[package.metadata.component]
package = "unified-attestation:verifier"

[dependencies]
serde.workspace = true
serde_json.workspace = true
wit-bindgen.workspace = true
base64.workspace = true
